<resources>
    <string name="app_name">TimesTrainer</string>
    <string name="action_settings">Settings</string>
    <string name="space" />
    <string name="timer_title">Time: </string>
    <string name="of_label"> of </string>
    <string name="zero">0</string>
    <string name="score_title">Score: </string>
    <string name="multiplication_symbol"> x </string>
    <string name="equals_symbol"> = </string>
    <string name="report">Report</string>
    <string name="username">Username:</string>
    <string name="submit">Submit</string>
</resources>
